# ospray_starter

./: CMakeLists.txt  main.cpp
module/: CMakeLists.txt  EllipsoidIntersect.ih  EllipsoidsShared.h  SphericalHarmonics.cpp  SphericalHarmonics.h  SphericalHarmonicsIntersect.ih  SphericalHarmonicsIntersectRelatedWork.ih  SphericalHarmonicsShared.h  SuperquadricIntersect.ih  SuperquadricsShared.h  bracketed_newton_bisection.ih  complex_algebra.ih  ellipsoid.cpp  ellipsoid.h  ellipsoid.ispc  example_geometry.cpp  example_geometry.h  example_geometry.ispc  example_module_init.cpp  module_init.cpp  sh.ih  spherical_harmonics.ispc  superquadric.cpp  superquadric.h  superquadric.ispc  wigner.ih
util/: arcball_camera.cpp  arcball_camera.h
